kubernetes/minio/deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: minio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: minio
  name: minio-deployment
  labels:
    app: minio
spec:
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio-container
          image: minio/minio:latest
          args:
            - server
            - /data
          ports:
            - containerPort: 9000
              hostPort: 9000
          readinessProbe:
            httpGet:
              path: /minio/health/ready
              port: 9000
            initialDelaySeconds: 120
            periodSeconds: 20
          # Liveness probe detects situations where MinIO server instance
          # is not working properly and needs restart. Kubernetes automatically
          # restarts the pods if liveness checks fail.
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
            initialDelaySeconds: 120
            periodSeconds: 20
          # Mount the volume into the pod
          volumeMounts:
            - name: nginx-pv-storage
              mountPath: "/data"
      volumes:
        - name: nginx-pv-storage
          persistentVolumeClaim:
            claimName: minio-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  namespace: minio
  name: minio-service
spec:
  ports:
    - name: http
      targetPort: 9000
      port: 9000
  selector:
    app: minio
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: minio
  name: minio-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - http:
        paths:
          - path: /minio
            pathType: Prefix
            backend:
              service:
                name: minio-service
                port:
                  name: http
